# agentic-types

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  jsonrpc.rs  lib.rs  unit_tests.rs  util_types.rs
src/agent_card/: card.rs  interface.rs  mod.rs  security_scheme.rs  signature.rs  skill.rs  transport.rs
src/protocol_data/: artifact.rs  message.rs  mod.rs  push_notification.rs  task_state.rs  task_status.rs  tasks.rs
