[package]
name = "agentic-types"
version = "0.1.5"
authors = ["448-OG <superuser@448.africa>"]
edition = "2021"
license = "Apache-2.0"
description = "Types to serialize and deserialize agent-to-agent communication"
keywords = ["agent-to-agent", "a2a", "ai"]
categories = ["web-programming::http-client", "web-programming::http-server"]
readme = "./README.md"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"
